# UmbilicalStandalone

./: .gitignore  Makefile  Makefile.base.mk  README.md
docs/: BUILDING.md
dpf/: CMakeLists.txt
dpf/cmake/: DPF-plugin.cmake
dpf/distrho/extra/: WebViewImpl.cpp  WebViewWin32.hpp
dpf/distrho/src/: DistrhoPluginMAPI.cpp
plugins/: Makefile  plugins.cpp
plugins/Autinn/: .gitignore  CMakeLists.txt  dev_notes.txt  dev_notes_autinn_scope_statemachine.txt  plugin-mm.json  plugin.json
plugins/Autinn/.github/workflows/: build-plugin.yml  metamodule.yml
plugins/Autinn/src/: Amp.cpp  Autinn-dsp.hpp  Autinn.cpp  Autinn.hpp  Bass.cpp  Boomerang.cpp  CVConverter.cpp  Chord.cpp  Coil.cpp  Deadband.cpp  Digi.cpp  Disee.cpp  Excavi.cpp  Fil.cpp  Flopper.cpp  Geiger.cpp  Jette.cpp  Kicker.cpp  Melody.cpp  Mixer6.cpp  Nap.cpp  Non.cpp  Oxcart.cpp  Retri.cpp  Saw.cpp  Saw2.cpp  Scope.cpp  Sjip.cpp  Snare.cpp  Square.cpp  TriBand.cpp  VectorDriver.cpp  Vibrato.cpp  Zod.cpp
plugins/Befaco/: CHANGELOG.md
plugins/Befaco/docs/: Oneiroi.md
plugins/Befaco/src/: ABC.cpp  Atte.cpp  AxBC.cpp  Bandit.cpp  Burst.cpp  Bypass.cpp  DualAtenuverter.cpp  EvenVCO.cpp  Mixer.cpp  Mixer2.cpp  Morphader.cpp  MuDi.cpp  Muxlicer.cpp  NoisePlethora.cpp  Percall.cpp  SamplingModulator.cpp  Slew.cpp  SlewLimiter.cpp  Voltio.cpp  (+4 more)
plugins/ML_modules/: plugin.json
plugins/MUS-X/: README.md  plugin.json
plugins/Meander/: CHANGELOG.md  plugin.json
plugins/Sapphire/: CHANGELOG.md  plugin.json
plugins/WSTD-Drums/: README.md  plugin.json
plugins/rcm-modules/: Makefile  README.md  plugin.json
(+182 files in other folders)
